# griffonner

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: ai.md  api.md  cli-reference.md  getting-started.md  index.md  template-reference.md  templates.md  watch-mode.md
docs/development/: ai-bundle-creation.md  bundle-development.md  plugin-development.md
docs/home/: getting-started.md  index.md
docs/plugins/: ai-plugin-development.md  managing-plugins.md  using-filters.md  using-processors.md
docs/template-guides/: ai-template-guide.md  index.md  template-development.md  template-reference.md
docs/user-guide/: cli-reference.md  configuration.md  frontmatter-reference.md  watch-mode.md
src/griffonner/: __init__.py  cli.py  config.py  core.py  frontmatter.py  griffe_wrapper.py  templates.py  watcher.py
src/griffonner/plugins/: __init__.py  base.py  manager.py  protocols.py
templates/python/default/: class.md.jinja2  function.md.jinja2  module.md.jinja2
test/: test_cli.py  test_config.py  test_core.py  test_frontmatter.py  test_griffe_wrapper.py  test_plugins_base.py  test_plugins_integration.py  test_plugins_manager.py  test_plugins_protocols.py  test_templates.py  test_watcher.py
test/plugins/: __init__.py  test_plugins_base.py  test_plugins_integration.py  test_plugins_local.py  test_plugins_manager.py  test_plugins_protocols.py
